// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ ?2",
      "Type ~~ ?4",
    ],
    "term": "λr -> Schema [ foo: Num | r ]",
    "type": "Π(r: Row) -> (closure: Type -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 79,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 87,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 84,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 86,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 83,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 85,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 2453,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "id": 2457,
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "id": 2455,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 2456,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "id": 2458,
        "type": "App",
      },
      "id": 2459,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 80,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 2460,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "Closure",
      },
      "id": 88,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?3",
      "Type ~~ ?5",
      "?1 ~~ Schema [ | ?6 ]",
    ],
    "term": "λr -> Struct [ foo: Num | r ]",
    "type": "Π(r: ?1) -> (closure: Schema [ foo: Type | ?6 ] -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 53,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 50,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 3,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 52,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 5,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 45,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "lvl": 1,
        "right": {
          "id": 57,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 55,
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 6,
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 54,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 56,
            "type": "App",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 49,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 51,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 4,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 2,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1628,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "id": 1632,
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "id": 1630,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 1631,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 1633,
        "type": "App",
      },
      "id": 1634,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 46,
          "type": "Neutral",
          "value": {
            "id": 45,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "arg": {
            "id": 1637,
            "row": {
              "label": "foo",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 6,
                },
              },
              "type": "extension",
              "value": {
                "id": 1636,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Type",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 1635,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 1638,
          "type": "App",
        },
        "type": "Closure",
      },
      "id": 62,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 1`] = `
{
  "displays": {
    "constraints": [
      "String ~~ ?6",
      "Type ~~ ?8",
      "Num ~~ ?2",
      "Type ~~ ?4",
    ],
    "term": "[ y: String, x: Num ]",
    "type": "Row",
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 25,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 6,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 27,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 8,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 29,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 21,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 23,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 20,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 22,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 24,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 5,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "id": 26,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 7,
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 8,
        },
      },
    },
    "term": {
      "id": 815,
      "row": {
        "label": "y",
        "row": {
          "label": "x",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "id": 814,
            "type": "Var",
            "variable": {
              "name": "Num",
              "type": "Free",
            },
          },
        },
        "type": "extension",
        "value": {
          "id": 813,
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
      },
      "type": "Row",
    },
    "type": {
      "id": 2,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Row",
      },
    },
    "typedTerms": {},
  },
}
`;
